<resources>
    <string name="app_name">Tripper</string>
    <string name="trip_title_hint">Enter a title for the trip.</string>
    <string name="trip_title_label">Title</string>
    <string name="trip_details_label">Details</string>
    <string name="trip_solved_label">Completed</string>
    <string name="trip_type_label">Trip Type</string>
    <string name="trip_duration_hint">How long are you going for?</string>
    <string name="trip_duration_label">Duration</string>
    <string name="trip_destination_hint">Where are you going?</string>
    <string name="trip_destination_label">Destination</string>
    <string name="trip_comment_hint">Write a comment</string>
    <string name="trip_comment_label">Comment</string>
    <string name="trip_add_label">Logs</string>
    <string name="settings_trip">Settings</string>
    <string name="trip_delete_label">Delete</string>
    <string name="trip_save_label">Save</string>
    <string name="trip_cancel_label">Cancel</string>
    <string name="delete_toast">Trip deleted</string>
    <string name="save_toast">Trip saved</string>

    <string name="new_trip">New Trip</string>

    <string name="trip_location_label">Location</string>
    <string name="trip_location_button">Show location</string>



    <string name="settings_name_label">Name</string>
    <string name="settings_sid_label">ID</string>
    <string name="settings_email_label">Email</string>
    <string name="settings_gender_label">Gender</string>
    <string name="settings_comment_label">Comment</string>

    <string name="settings_name_hint">Name</string>
    <string name="settings_sid_hint">ID</string>
    <string name="settings_email_hint">Email</string>
    <string name="settings_gender_hint">Gender</string>
    <string name="settings_comment_hint">Comment</string>

    <string-array name="trip_type_array">
        <item name="spinner_entry_work">Work</item>
        <item name="spinner_entry_personal">Personal</item>
        <item name="spinner_entry_commute">Commute</item>
    </string-array>
</resources>