<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    >


    <include
        layout="@layout/view_camera_and_title"/>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_details_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <Button android:id="@+id/trip_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip_type_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <Spinner
        android:id="@+id/trip_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/trip_type_array">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip_destination_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText
        android:id="@+id/trip_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/trip_destination_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip_duration_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:id="@+id/trip_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/trip_duration_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip_comment_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:id="@+id/trip_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/trip_comment_hint"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/trip_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_save_label"
            android:layout_marginLeft="30dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <Button
            android:id="@+id/trip_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_cancel_label"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/trip_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_delete_label"

            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/trip_cancel"
            android:layout_toEndOf="@+id/trip_cancel"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip_location_label"
        style="?android:listSeparatorTextViewStyle"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trip_location_button"
        android:text="@string/trip_location_button"/>


</LinearLayout>
    </ScrollView>