<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <EditText
        android:id="@+id/settings_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_name_label"/>

    <EditText
        android:id="@+id/settings_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_id_label"/>
    <EditText
        android:id="@+id/settings_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_email_label"/>
    <EditText
        android:id="@+id/settings_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_gender_label"/>
    <EditText
        android:id="@+id/settings_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_comment_label"/>


</LinearLayout>